0.6.0
* hct: support for zero-length key
* str: new words: str-data@,str-length!  (2007-11-14)
* gmo: new module (Gettexts mo-file) (2007-11-12)
* hnt: bug fix (2007-11-11)
* hci: extends hni
* hni: new module (Hash table base iterator) (2007-11-10)
* hct: extends hnt
* hnt: new module (Hash table base module) (2007-11-09)
* hcn: extends hnn
* hnn: new module (Hash Table base node) (2007-11-09)
* msc: new module (Message Catalog) (2007-11-09)
* tis: new word tis-iscan-string (2007-10-17)
* tis: new word tis-set-reader (2007-10-17)
* tis: new word tis-read-all (2007-10-08)
* htm: new module (HTML reader and writer) (2007-09-16)
* str: new word: str+columns (2007-07-17)
* arg: new module (Arguments parser) (2007-07-09)
* config.fs: 0e0->0E+0, 1e0->1E+0, 2e0->2E+0 (2007-06-25)
0.5.0
* config.fs: #bits/byte uses environment (2007-06-07)
* config.fs: sys.eol -> end-of-line, sys.bits-in-byte -> #bits/byte,
  sys.bits-in-char -> #bits/char, sys.bits-in-cell -> #bits/cell
* config.fs: new word char/ (2007-06-07)
* config.fs: sys.bigendian -> bigendian? (2007-06-05)
* sh2: new module (SHA-256) (2007-06-05)
* config.fs: new word ?free for freeing memory blocks (2007-05-21)
* rgx: new module (Regular Expression) (2007-05-10)
* nfe: new module (Non-deterministic finite automata expression) (2007-05-08)
* nfs: new module (Non-deterministic finite automata state) (2007-05-07)
* minForth config.fs/make.fs added
* nci: new module (n-Tree cell iterator) (2007-03-13)
* nct: new module (n-Tree cell tree) (2007-03-13)
* ncn: new module (n-Tree cell node) (2007-03-13)
* nni: new module (n-Tree base iterator) (2007-03-05)
* nnt: new module (n-Tree base module) (2007-03-04)
* nnn: new module (n-Tree base node) (2007-03-04)
* sci: extends sni
* scl: extends snl
* scn: new words scn-cell! scn-cell@
* scn: extends snn
* sni: new module (Single linked base iterator) (2007-02-27)
* snl: new module (Single linked base list) (2007-02-26)
* snn: new module (Single linked base node) (2007-02-19)