@@ -65,6 +65,7 @@ Index of used prefices
       - Compound
 ----- - ------------------------------------------------
 6 arg - Argument parser
+6 d0s - Datetime output stream
 5 nfe - non-deterministic finite automate expression
 5 nfs - non-deterministic finite automata state
 5 rgx - Regular expression module
@@ -123,7 +124,7 @@ A     - Font ??
 ----- - ------------------------------------------------
       - Compound
 ----- - ------------------------------------------------
-6 dts - Datetime text stream
+7 dis - DateTime input stream
 6 gps - nmea handling, distance calculation
 ----- - ------------------------------------------------
       - Components
